Adding a 'Create a new User' feature
Driven by a feature spec, new users can now click a button and sign up
with their name and email in a form. Once the form is submitted, there
is a success notice upon redirection to the homepage. The next step
would be to add validation of uniqueness of name and email.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,8 @@
 <h1>Hello World!</h1>
+<% if flash[:success] %>
+  <div class="success"><%= flash[:success] %></div>
+<% end %>
+#Add room for errors here. 
+<div class= "btn btn-primary">
+  <%= link_to 'Sign Up', new_user_path %>
+</div>
