--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,7 @@
 <h1>Hello World!</h1>
+<% if flash[:success] %>
+  <div class="success"><%= flash[:success] %></div>
+<% end %>
+<div class= "btn btn-primary">
+  <%= link_to 'Sign Up', new_user_path %>
+</div>
