--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,7 @@
 <% if flash[:success] %>
   <div class="success"><%= flash[:success] %></div>
 <% end %>
+#Add room for errors here. 
 <div class= "btn btn-primary">
   <%= link_to 'Sign Up', new_user_path %>
 </div>
