Modify tests to account for password addition Add ability to sign up and be signed in Configured devise to permit a name, email, and password from a new user.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,6 +7,9 @@
 <%= f.label :email %>
 <%= f.email_field :email %>
 
+<%= f.label :password %>
+<%= f.password_field :password %>
+
 <%= f.submit 'Sign Up', class: "btn btn-primary" %>
 <% end %>
 </div>
