--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,5 +4,5 @@
 <% end %>
 #Add room for errors here. 
 <div class= "btn btn-primary">
-  <%= link_to 'Sign Up', new_user_path %>
+  <%= link_to 'Sign Up', new_user_registration_path %>
 </div>
