Adding a recipe model and validations for title, ingredients, and instructions.
Updated the routes to be nested in user (for easier readability).

Added a flash message (bare bones) to let the user know whether or not a recipe saves.

Moved all static strings to I18n with proper indentation and changed from form_for to form_with

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,16 @@
 </head>
 <body>
   <div id="header">
-    <% if signed_in? -%>
+    <% if signed_in? %>
+      <%= link_to t(".new_recipe"), new_user_recipe_path(current_user) %>
       <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
-    <% else -%>
+    <% else %>
       <%= link_to t(".sign_in"), sign_in_path %>
-    <% end -%>
+    <% end %>
   </div>
 
   <div id="flash">
-    <% flash.each do |key, value| -%>
+    <% flash.each do |key, value| %>
       <div id="flash_<%= key %>"><%=h value %></div>
     <% end %>
   </div>
