--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,6 +1,6 @@
 <h1>I'm here to create a new recipe</h1>
 
-  <%= form_for :recipe, url: user_recipes_path  do |f| %>
+<%= form_with model: [@user, @recipe] do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
 
@@ -10,5 +10,5 @@
   <%= f.label :instructions %>
   <%= f.text_field :instructions %>
 
-  <%= f.submit 'Create' %>
+  <%= f.submit %>
 <% end %>
