--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <div id="header">
     <% if signed_in? %>
       <%= link_to t(".new_recipe"), new_user_recipe_path(current_user) %>
+      <%= link_to t('.view_recipes'), user_recipes_path(current_user) %>
       <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
     <% else %>
       <%= link_to t(".sign_in"), sign_in_path %>
