--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,1 +1,14 @@
-<% link_to t('.new_recipe'), user_recipes_path(current_user) %>
+<h1>Listing all recipes for <%= @user.name %></h1>
+
+<ul>
+<% @recipes.each do |recipe| %>
+  <div class="row">
+    <div class="col-md-2">
+        <h5>User: <%= recipe.user.name %></h5>
+    </div>
+
+    <div class="col-lg-6 well">
+      <h4><%= recipe.title %></h4>
+      <h4><%= link_to t('.show_recipe'), user_recipe_path(current_user, recipe.id)%></h4>
+      <% end %>
+
