--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,3 +12,7 @@
   <%= form.label :password %>
   <%= form.password_field :password %>
 </div>
+
+<div class="picture-field">
+  <%= form.label :picture %>
+  <%= form.file_field :picture %>
