--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,7 +10,7 @@
         <strong>Pictures:</strong>
         <br>
         <%= @recipe.pictures.each do |picture| %>
-          <%= image_tag picture %>
+          <%= image_tag picture.variant(resize: "500x500") %>
       <% end %>
       </li>
         </p>
