WIP: API request working! Need to write a test for it and get the api key from credentials file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <% end %>
   </div>
 
-  <div id="flash">
+  <div id="flash" class="col-lg-12 mt-5">
     <% flash.each do |key, value| %>
       <div id="flash_<%= key %>"><%=h value %></div>
     <% end %>
