--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,17 @@
-<h1>Hello World!</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 mt-5">
+      <div class="mx-auto mt-5" style="width: 400px">
+        <%= form_with(url: search_path, method: 'get', local: true) do %>
+          <div class="form-group">
+            <%= label_tag :brewery, 'Search for a brewery '%>
+            <%= text_field_tag :brewery, nil, placeholder:
+              'Eg. Anchor', class: 'form-control'%>
+          </div>
+
+          <%= button_tag 'Search', class: 'btn btn-success btn-block' %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
