Add proper spec for a user to sign up with a picture, utilizing a new method in clearance and using

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
-<h1>Hello <%= @user.name %></h1>
+<%if @user %>
+  <h1>Hello <%= @user.name %></h1>
+
 <% if @user.picture.attached? %>
   <dl>
   <dt>Picture:</dt>
   <dd><%= image_tag @user.picture.variant(resize: "500x500") %></dd>
   </dl>
+<% end %>
 <% end %>
