--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,23 +31,26 @@
   <div class="row">
     <div class = "col-lg-12 mt-5">
       <h1> Browse recipes </h1>
-      <ul>
+      <dl>
         <%= will_paginate @recipes %>
         <% @recipes.each do |recipe| %>
-          <%= recipe.id %>
           <div class = "row">
             <div class="col-md-2">
-              <h5>User: <%= recipe.user.name %></h5>
+              <dt>User:</dt>
+              <dd><%= recipe.user.name %></dd>
             </div>
 
             <div class = "col-lg-6 well">
-              <h4><%= recipe.title %></h4>
-              <h5><%= recipe.ingredients %></h5>
-              <h5><%= recipe.instructions %><h5>
+              <dt>Title:</dt>
+              <dd><%= recipe.title %></dd>
+              <dt>Ingredients:</dt>
+              <dd><%= recipe.ingredients %></dd>
+              <dt>Instructions:</dt>
+              <dd><%= recipe.instructions %><dd>
             </div>
           </div>
         <% end %>
-      </ul>
+      </dl>
     </div>
   </div>
 </div>
