--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,9 +23,9 @@
       <div class="mx-auto mt-5" style="width: 400px">
         <%= form_with(url: search_path, method: 'get', local: true) do %>
           <div class="form-group">
-            <%= label_tag :brewery, 'Search for a brewery '%>
+            <%= label_tag :brewery, 'Looking for inspiration? Search for a brewery near you '%>
             <%= text_field_tag :brewery, nil, placeholder:
-              'Eg. Anchor', class: 'form-control'%>
+              'Eg. Anchor Steam', class: 'form-control'%>
           </div>
 
           <%= button_tag 'Search', class: 'btn btn-success btn-block' %>
@@ -43,20 +43,21 @@
         <%= will_paginate @recipes %>
         <% @recipes.each do |recipe| %>
           <div class = "row">
-            <div class="col-md-2">
+            <div class="col-sm-2">
               <dt>User:</dt>
               <dd><%= recipe.user.name %></dd>
-            </div>
-
-            <div class = "col-lg-6 well">
               <dt>Title:</dt>
               <dd><%= recipe.title %></dd>
+            </div>
+
+            <div class = "col-lg-10 well">
               <dt>Ingredients:</dt>
               <dd><%= recipe.ingredients %></dd>
               <dt>Instructions:</dt>
               <dd><%= recipe.instructions %><dd>
             </div>
           </div>
+          <hr>
         <% end %>
       </dl>
     </div>
