--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,15 +1,21 @@
+<div class="container">
+  <div class="col-lg-12 mt-5">
 <h1>Listing all recipes for <%= @user.name %></h1>
 
 <ul>
 <% @recipes.each do |recipe| %>
   <div class="row">
     <div class="col-md-2">
-        <h5>User: <%= recipe.user.name %></h5>
+      <dt>User:</dt>
+      <dd><%= recipe.user.name %></dd>
     </div>
 
     <div class="col-lg-6 well">
-      <h4><%= recipe.title %></h4>
+      <dt>Title:</dt>
+      <dd><%= recipe.title %></dd>
       <h4><%= link_to t('.show_recipe'), user_recipe_path(current_user, recipe.id)%></h4>
     </div>
   </div>
 <% end %>
+</end>
+</div>
