--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,4 +1,5 @@
-<h1>Showing Recipe for <%= @recipe.title %></h1>
+<div class="container">
+<h1> Recipe for <%= @recipe.title %></h1>
 
   <dl>
     <dt>Ingredients: </dt>
@@ -13,6 +14,8 @@
           <%= image_tag picture.variant(resize: "500x500") %>
         </dd>
       <% end %>
-      <% end %>
+    <% end %>
   </dl>
+  <%= link_to "Back", user_recipes_path(@recipe.user) %>
+</div>
 
