Add some basic styling to 'Creating a recipe', give color to create button and sign out button.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
     <% if signed_in? %>
       <%= link_to t(".new_recipe"), new_user_recipe_path(current_user), class: 'nav-link' %>
       <%= link_to t(".view_recipes"), user_recipes_path(current_user), class: 'nav-link' %>
-      <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
+      <%= button_to t(".sign_out"), sign_out_path, method: :delete, class: 'btn btn-danger' %>
       <% else %>
       <%= link_to t(".sign_in"), sign_in_path, 'nav-link' %>
       <% end %>
