--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h1>I'm here to create a new recipe</h1>
 
 <%= form_with model: [@user, @recipe] do |f| %>
@@ -13,5 +14,6 @@
   <%= f.label :pictures %>
   <%= f.file_field :pictures, multiple: true %>
 
-  <%= f.submit %>
+  <%= f.submit class: 'btn btn-success' %>
 <% end %>
+</div>
