--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -15,4 +15,14 @@
       <% end %>
       <% end %>
   </dl>
-
+  <div class = "container" >
+    <%= form_for :comment do |form| %>
+      <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_field :body, id: "comment" %>
+        <div class="submit-field">
+          <%= form.submit "Submit comment" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
